--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "db:reset": "npm run db:schema && npm run db:seed"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "pg": "^8.14.1"
+    "@faker-js/faker": "^10.2.0",
+    "express": "^5.2.1",
+    "pg": "^8.17.2"
   },
   "devDependencies": {
     "supertest": "^7.1.0",
@@ -24,5 +25,19 @@
   },
   "engines": {
     "node": ">=22"
-  }
+  },
+  "version": "1.0.0",
+  "description": "Filez is a next-gen file management platform built for extreme speed and performance. Your folders and files have never felt snappier!",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/naisiaye/filez.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/naisiaye/filez/issues"
+  },
+  "homepage": "https://github.com/naisiaye/filez#readme"
 }
